Update title from 'aws cicd' to 'aws hero cicd'

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>aws cicd</title>
+    <title>aws hero cicd</title>
     <style>
       body {
         color: #ffffff;
