--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>aws hero cicd</title>
+    <title>aws hero hhh cicd</title>
     <style>
       body {
         color: #ffffff;
