Change body text color from white to light cream

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>aws hero hhh cicd</title>
     <style>
       body {
-        color: #ffffff;
+        color: #FFFDD0;
         font-family: Arial, sans-serif;
         font-size:14px;
         -moz-transition-property: text-shadow;
